<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.asmaa.taboogtask_productdetails.Activity_ProductDetails"
    android:orientation="vertical">





    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wishlist_en"
            android:layout_weight="1"
            android:background="@color/blue"
            android:textColor="#FFFFFF"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart_en"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="fill_parent"
                android:layout_height="150dp"/>


    <!-- card view for   key features  for product -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KeyFeatures_en"
                    android:paddingBottom="4dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat"
                    />
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_dot"
                        android:layout_gravity="center"
                         />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="2"
                    android:text="Surface pen not included,Sold Seprately"

                    />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_dot"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Surface pen not included,Sold Seprately"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_dot"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Surface pen not included,Sold Seprately"

                        />
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>








     <!--card view for protection and original and images for them-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="2"
                >


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="42dp"
                        android:src="@drawable/icon_buyerprotection"
                        android:layout_gravity="center"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat"
                            android:text="Buyer Protaction"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="14 Days Return policy Warranty Coverage"

                            />


                    </LinearLayout>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="42dp"
                        android:src="@drawable/icon_originalproduct"
                        android:layout_gravity="center"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat"
                            android:text=" 100% Genuine Product"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="14 Days Return policy Warranty Coverage"

                            />


                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>


        </android.support.v7.widget.CardView>



       <!--card view for payments and  images -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PaySecurity_en"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    />
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="64dp"
                    android:layout_height="78dp"
                    android:src="@drawable/icon_paypalpayment"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="64dp"
                    android:layout_height="78dp"
                    android:src="@drawable/icon_discoverpayment"
                    android:layout_weight="1"
                    android:id="@+id/imageView" />

                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="64dp"
                    android:layout_height="78dp"
                    android:src="@drawable/icon_maestropayment"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="64dp"
                    android:layout_height="78dp"
                    android:src="@drawable/icon_visapayment"
                    android:layout_weight="1" />


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!--  Card View Reviews -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Reviews_en"
                    android:layout_margin="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_gravity="center" >
                  <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:layout_gravity="center"
                        android:text="4.1"

                        />
                    <ImageView
                        android:layout_width="106dp"
                        android:layout_height="22dp"
                        android:src="@drawable/icon_review"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:text="Based on 23877 Ratings"
                        />

                </LinearLayout>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_arrow"
                    android:layout_gravity="center"
                    android:id="@+id/imageView3" />


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!-- card view  for description -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="2"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Description_en"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Microsoft Service Pro 4 Corei7 RAM 265 SDD 12.5 Inch Tablet-Silver"
                        />


                </LinearLayout>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_arrow"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/imageView4" />

            </LinearLayout>






        </android.support.v7.widget.CardView>

        <!-- card view for Specification -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:text="@string/Specification_en"
                    android:layout_marginBottom="8dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/articalnmber_en"
                    />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6584400 "
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modelnumber_en"
                        />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CQ-14477-FD"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brand_en"
                        />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Microsoft "
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color_en"
                        />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sliver "
                        />
                </LinearLayout>
            </LinearLayout>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_arrow"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/imageView5" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
